# back-end-boiler-shop

./: .env  .gitignore  Dockerfile  MIT License  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tests.py
.github/workflows/: django_tests.yml
data/: old_specification_B.json  old_specification_K.json  old_specification_KTK.json  specification.json
nginx/: default.conf
src/core/: router.py  urls.py
src/core/settings/: __init__.py
src/orders/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
src/orders/migrations/: 0001_initial.py  0002_alter_customer_email_alter_customer_full_name_and_more.py  0002_alter_orderproduct_order.py  0002_customer.py  0002_initial.py  0003_alter_customer_email_alter_customer_full_name_and_more.py  0003_alter_customer_full_name.py  0004_orderproduct.py  0005_alter_orderproduct_order.py
src/orders/tests/: test_models.py  test_serializers.py  test_signals.py  test_validators.py
src/products/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_alter_category_parent.py  0002_alter_category_uuid_alter_price_uuid_and_more.py  0002_product_grade.py  0002_product_state.py  0002_productimageset.py  0002_remove_product_slug.py  0002_rename_price_price_value.py  0003_alter_category_parent.py  0003_alter_product_name.py  0003_productimageset_cover_image.py  0004_alter_productimageset_cover_image.py  0004_product.py  0004_remove_product_price_price.py  0005_alter_product_description.py  0005_category_image.py  0005_product_price.py  0006_alter_specification_attributes.py  0006_attribute.py  0007_remove_attribute_id_attribute_uuid_specification.py
src/script/: data_classes.py
src/scripts/: _json_creator_of_compact_catalog_data.py  compact_catalog_data.json  creator_json_data.py  json_creator_of_catalog_data.py  script_docs.md
src/utils/: admin.py  apps.py  mixins.py  models.py  serializers.py  signals.py  utils.py
(+43 files in other folders)
